Move app js to match overlay name

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -68,6 +68,6 @@
   <script src="https://cdn.jsdelivr.net/combine/npm/vue@2,npm/bootstrap-vue@2/dist/bootstrap-vue.min.js,npm/moment@2"></script>
   <script src="https://kit.fontawesome.com/0caf4eb225.js" crossorigin="anonymous"></script>
 
-  <script src="app.js"></script>
+  <script src="overlay.js"></script>
 
 </html>
